--- a/html/detox-chat-app/style.scss
+++ b/html/detox-chat-app/style.scss
@@ -77,6 +77,7 @@ detox-chat-app-dialogs {
 		max-width : 100vw;
 		width     : var(--sidebar-width-max);
 		transform : translateX(calc(-1 * var(--app-width)));
+		z-index   : 1;
 
 		&::before, &::after {
 			display : block;
